filter options cont overflow temp fix

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,7 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 
 header {
@@ -38,7 +39,7 @@ header::after {
     height: 100%;
     box-sizing: border-box;
     position: relative;
-    z-index: 1000;
+    z-index: 100;
     display: flex;
     justify-content: space-between;
 }
@@ -62,6 +63,7 @@ header::after {
 #filters-options-cont {
     height: 360px;
     width: 90vw;
+    max-width: 420px;
     position: absolute;
     left: 5vw;
     background-color: rgb(231, 231, 231);
@@ -75,6 +77,12 @@ header::after {
 
 .filters-options-cont-showing {
     bottom: -310px;
+}
+
+@media (min-width: 700px) {
+    #filters-options-cont {
+        left: 42vw;
+    }
 }
 
 header h1 {
